# parca-demo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  clean.sh  deploy-apps.sh  deploy-infra.sh  deploy.sh  setup-prometheus.sh  start.sh  stop.sh
c/: Dockerfile  Makefile  deployment.yaml  main.c
cgo/: .gitignore  Makefile  deployment.yaml  go.mod
cpp/: .gitignore  Dockerfile  Dockerfile.clang  Makefile  deployment.yaml  main.cpp
deno/: Dockerfile  Makefile  README.md  deployment.yaml  main.ts
dotnet/: .gitignore  Dockerfile  Dockerfile.aot  Makefile  Program.cs  README.md  deployment.yaml
erlang/: .gitignore  Dockerfile  Makefile  README.md
go/: Dockerfile  Makefile  deployment.yaml  go.mod  main.go
go-cgo/: Dockerfile  main.go
graalvm/: Dockerfile  Makefile  README.md  build.gradle  deployment.yaml  settings.gradle
graalvm-quarkus/: Dockerfile  README.md  deployment.yaml  mvnw  pom.xml
graalvm-springboot/: Dockerfile  README.md  build.gradle  deployment.yaml  settings.gradle
java/: Dockerfile  Dockerfile.libperf  Dockerfile.openj9  Makefile  deployment.yaml
java-jni/: .gitignore  DemoJNI.cpp  DemoJNI.h  DemoJNI.java  Dockerfile  Makefile  deployment.yaml
julia/: Dockerfile  Makefile  README.md  default.nix  deployment.yaml  main.jl
kube-prometheus/: Makefile  grafana-dashboard-api-export.json  jsonnetfile.lock.json  monitoring-deploy.sh  parca.jsonnet  restore-grafana-dashboard.sh
mojo/: .gitignore  Dockerfile  Dockerfile.mojo  Makefile  README.md  (+4 more)
rust/: Cargo.toml  Dockerfile  Makefile  deployment.yaml
rust/src/: main.rs
(+62 files in other folders)
