cargo-features = ["profile-rustflags"]

[package]
name = "rust"
version = "0.1.0"
authors = ["Matthias Loibl <mail@matthiasloibl.com>"]
edition = "2018"

[profile.release]
debug = true
rustflags = ["-C", "force-frame-pointers=on"] # https://github.com/rust-lang/cargo/pull/10217

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
